[block-expand] Fixed error where the show less link is clickable on whitespace

--- a/src/block/expand/style.scss
+++ b/src/block/expand/style.scss
@@ -21,7 +21,7 @@
 	}
 	.ugb-expand__more-text,
 	.ugb-expand__less-toggle-text {
-		display: block !important;
+		display: inline-block !important;
 	}
 }
 
